syntax = "proto3";

package hotstuffpb;

import "gorums.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/relab/hotstuff/internal/proto/hotstuffpb";

service Hotstuff {
  rpc Propose(Proposal) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  rpc Vote(PartialCert) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }

  rpc Timeout(TimeoutMsg) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  rpc NewView(SyncInfo) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }

  rpc Fetch(BlockHash) returns (Block) { option (gorums.quorumcall) = true; }
}

message Proposal {
  Block Block = 1;
  AggQC AggQC = 2;
  uint32 Pipe = 6;
}

message BlockHash { 
  bytes Hash = 1; 
  uint32 Pipe = 2;
}

message Block {
  bytes Parent = 1;
  QuorumCert QC = 2;
  uint64 View = 3;
  bytes Command = 4;
  uint32 Proposer = 5;
  uint32 Pipe = 6;
}

message ECDSASignature {
  uint32 Signer = 1;
  bytes R = 2;
  bytes S = 3;
}

message BLS12Signature { bytes Sig = 1; }

message EDDSASignature {
  uint32 Signer = 1;
  bytes Sig = 2;
 }

message Signature {
  oneof Sig {
    ECDSASignature ECDSASig = 1;
    BLS12Signature BLS12Sig = 2;
    EDDSASignature EDDSASig = 3;
  }
}

message PartialCert {
  QuorumSignature Sig = 1;
  bytes Hash = 2;
  uint32 Pipe = 3;
}

message ECDSAMultiSignature { repeated ECDSASignature Sigs = 1; }

message EDDSAMultiSignature {repeated EDDSASignature Sigs = 1;}

message BLS12AggregateSignature {
  bytes Sig = 1;
  bytes participants = 2;
}

message QuorumSignature {
  oneof Sig {
    ECDSAMultiSignature ECDSASigs = 1;
    BLS12AggregateSignature BLS12Sig = 2;
    EDDSAMultiSignature EDDSASigs =3;
  }
}

message QuorumCert {
  QuorumSignature Sig = 1;
  uint64 View = 2;
  bytes Hash = 3;
  uint32 Pipe = 4;
}

message TimeoutCert {
  QuorumSignature Sig = 1;
  uint64 View = 2;
}

message TimeoutMsg {
  uint64 View = 1;
  SyncInfo SyncInfo = 2;
  QuorumSignature ViewSig = 3;
  QuorumSignature MsgSig = 4;
  uint32 Pipe = 5;
}

message SyncInfo {
  QuorumCert QC = 1;
  TimeoutCert TC = 2;
  AggQC AggQC = 3;
  uint32 Pipe = 4;
}

message AggQC {
  map<uint32, QuorumCert> QCs = 1;
  QuorumSignature Sig = 2;
  uint64 View = 3;
  uint32 Pipe = 4;
}
